# substrate-kitties

./: .gitignore  Cargo.toml  README.md
frontend/: package-lock.json
frontend/src/: App.js  Kitties.js  KittiesNFTCollectionCards.js  KittiesNFTCollections.js  KittyCards.js
node/: Cargo.toml
pallets/nfts/: Cargo.toml
pallets/nfts/src/: lib.rs
pallets/substratekitties/: Cargo.toml
pallets/substratekitties/src/: lib.rs  mock.rs  tests.rs  weights.rs
pallets/template/src/: lib.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
