[workspace]
members = ["node", "pallets/template", 'pallets/substratekitties', "runtime"]
[profile.release]
panic = "unwind"

[workspace.package]
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
repository = "https://github.com/paritytech/polkadot-sdk.git"
license = "GPL-3.0-only"
